RESOLVED FIXED 131366
[CSSRegions] Crash when video in region exits fullscreen
https://bugs.webkit.org/show_bug.cgi?id=131366
Summary [CSSRegions] Crash when video in region exits fullscreen
Mihnea Ovidenie
Reported 2014-04-08 09:48:57 PDT
Assume you have a page with a video element, child of a content node, flowed in a region. Put the video in fullscreen. After you exit full screen, webkit crashes.
Attachments
Patch (6.47 KB, patch)
2014-04-08 10:13 PDT, Mihnea Ovidenie
no flags
Patch for landing (6.81 KB, patch)
2014-04-08 22:41 PDT, Mihnea Ovidenie
no flags
Mihnea Ovidenie
Comment 1 2014-04-08 10:13:45 PDT
Mihnea Ovidenie
Comment 2 2014-04-08 22:41:32 PDT
Created attachment 228938 [details] Patch for landing
WebKit Commit Bot
Comment 3 2014-04-08 23:18:28 PDT
Comment on attachment 228938 [details] Patch for landing Clearing flags on attachment: 228938 Committed r167001: <http://trac.webkit.org/changeset/167001>
WebKit Commit Bot
Comment 4 2014-04-08 23:18:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.